fix: zoom on small screen, feat: color change on hover

--- a/src/index.css
+++ b/src/index.css
@@ -35,4 +35,5 @@ body {
     flex-direction: column;
     align-items: center;
     margin-left: 5%;
+    gap: 40px;
 }
